--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,3 +2,24 @@ body {
     margin: 0;
     padding: 0;
 }
+.about-content ul {
+    padding: 0;
+    margin: 0;
+    list-style: none !important;
+}
+.about-content ul li {
+    background: url('../js/Site/Assets/check-circle.svg') top left no-repeat;
+    font-family: "Raleway", "Roboto", "Helvetica", "Arial", sans-serif;
+    font-size: 1.25rem !important;
+    color: #0D629A;
+    font-weight: 300;
+    height: 35px;
+    padding-top: 0px;
+    padding-left: 44px;
+}
+.about-content p {
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+    margin: 0;
+    margin-bottom: 20px !important;
+}
