--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    /* overflow: scroll;
+    overflow-x: hidden;
+    scrollbar-width: none; */
 }
 #root {
     position: relative;
@@ -20,19 +23,21 @@ html {
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     scrollbar-color: #0d629a #c3e7ff;
-    scrollbar-width: thin;
+    /* overflow: scroll;
+    overflow-x: hidden;
+    scrollbar-width: none; */
 }
-html::-webkit-scrollbar {
+::-webkit-scrollbar {
     width: 6px;
     border-radius: 6px;
     height: 0px;
 }
 
-html::-webkit-scrollbar-track {
-    display: none;
+::-webkit-scrollbar-track {
+    display: none !important;
 }
 
-html::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background-color: rgba(0, 0, 0, 0.4);
     border-radius: 4px;
     height: 0px;
@@ -132,7 +137,35 @@ li a {
     border:1px solid #0d629a;
     border-radius: 25px;
     margin-right: 40px;
-    margin-top:80px;
+    /* margin-top:80px; */
+  }
+  .Service-section-siderbar{
+   overflow: scroll;
+    overflow-x: hidden;
+    scrollbar-width: none;
+  }
+  .founder-section{
+    background-image: url("../js/Site/Assets/founder_bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+  }
+  .testimonial-quote svg{
+    position: absolute;
+    top: -67px;
+    right: 0;
+    font-size: 100px;
+    color: #0d629a;
+  }
+  .Service-section h2,  .Service-section h4{
+    font-family: "Raleway", "Roboto", "Poppins", sans-serif;
+    font-size: 1.4rem !important;
+    color: #0d629a;
+    font-weight: 500;
+    margin-block: 10px !important;
+  }
+  .Service-section p img{
+    width: 100%;
   }
 
 @media (max-width: 767px) {
