--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,7 +12,7 @@
     position: relative;
 }
 html {
-    /* font-size: 62.5%; */
+    font-size: 62.5%;
     font-family: "Roboto", "Raleway", "Poppins" sans-serif;
     font-weight: 300;
     font-style: normal;
