--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -388,11 +388,13 @@ li a {
     list-style: disc;
     margin-left: 3rem;
 }
-/* .knowledge_bg{
-    background-image: url('../js/Site/Assets/help_bg.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-} */
+.table-row,.table-pagination,th{
+    background-color: var(--secondary-color);
+    color: var(--primary-color) !important;
+    font-size: 1.8rem !important;
+
+}
+.product-download .MuiSvgIcon-root{color:var(--primary-color)}
 @media (max-width: 767px) {
     /* .box-hidden {
         display: none !important;
