--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -237,10 +237,11 @@ li a {
 }
 
 .Footer-section .footer-img {
-    width: 100%;
+    /* width: 100%; */
     max-width: 150px;
     height: 6rem;
-    padding: 1rem;
+    margin-right: 1.5rem;
+    border-radius: 5px;
 }
 
 .Footer-section .footer-certificates {
@@ -394,6 +395,15 @@ li a {
     font-size: 1.8rem !important;
 
 }
+.contact-icon{
+    background-color:var(--secondary-color);
+    color: var(--primary-color);
+    border-radius: 50%;
+    padding: 5px;
+    font-size: 4rem !important;
+    margin-right: 10px;
+}
+.MuiTypography-root.MuiTypography-subtitle1{padding:4px}
 .product-download .MuiSvgIcon-root{color:var(--primary-color)}
 @media (max-width: 767px) {
     /* .box-hidden {
