--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -194,7 +194,7 @@ li a {
     background: inherit;
 }
 .slick-prev {
-    left: 22px !important;
+    left: 43px !important;
 }
 .slick-next {
     right: 0 !important;
@@ -487,6 +487,7 @@ th {
         margin-right: 20px !important;
         padding-left: 0 !important;
         padding-right: 0 !important;
+        padding-top:20px !important;
     }
 
     .Services-section .MuiGrid-root > .MuiGrid-item {
